fix overflow

--- a/src/layout/main-layout.css
+++ b/src/layout/main-layout.css
@@ -25,7 +25,7 @@
 
 .upper-menu {
   width: 100%;
-  height: max;
+  height: 5%;
   background-color: aqua;
 
 }
